--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -7,7 +7,7 @@
    "outputs": [],
    "source": [
     "#| hide\n",
-    "from adviz.core import *"
+    "from adviz.value_counts_plus import *"
    ]
   },
   {
@@ -16,14 +16,16 @@
    "source": [
     "# adviz\n",
     "\n",
-    "> advertools visualizations"
+    "> `ad`vertools `vis`ualizations: `adviz`\n",
+    "\n",
+    "> Various charts that might be useful in your workflow while using `advertools` or other packages as well.\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This file will become your README and also the index of your documentation."
+    "Get startd quickly and see exmaples below"
    ]
   },
   {
@@ -53,7 +55,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Fill me in please! Don't forget code examples:"
+    "Count unique values in a list of items"
    ]
   },
   {
@@ -63,8 +65,179 @@
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<style type=\"text/css\">\n",
+       "#T_712df_row0_col1, #T_712df_row0_col3 {\n",
+       "  background-color: #cebc63;\n",
+       "  color: #000000;\n",
+       "}\n",
+       "#T_712df_row0_col2, #T_712df_row0_col4, #T_712df_row8_col1, #T_712df_row8_col3, #T_712df_row9_col1, #T_712df_row9_col3 {\n",
+       "  background-color: #00224e;\n",
+       "  color: #f1f1f1;\n",
+       "}\n",
+       "#T_712df_row1_col1, #T_712df_row1_col3 {\n",
+       "  background-color: #9d9576;\n",
+       "  color: #f1f1f1;\n",
+       "}\n",
+       "#T_712df_row1_col2, #T_712df_row1_col4 {\n",
+       "  background-color: #293f6e;\n",
+       "  color: #f1f1f1;\n",
+       "}\n",
+       "#T_712df_row2_col1, #T_712df_row2_col3 {\n",
+       "  background-color: #878478;\n",
+       "  color: #f1f1f1;\n",
+       "}\n",
+       "#T_712df_row2_col2, #T_712df_row2_col4 {\n",
+       "  background-color: #51586d;\n",
+       "  color: #f1f1f1;\n",
+       "}\n",
+       "#T_712df_row3_col1, #T_712df_row3_col3 {\n",
+       "  background-color: #5e636f;\n",
+       "  color: #f1f1f1;\n",
+       "}\n",
+       "#T_712df_row3_col2, #T_712df_row3_col4 {\n",
+       "  background-color: #6b6d72;\n",
+       "  color: #f1f1f1;\n",
+       "}\n",
+       "#T_712df_row4_col1, #T_712df_row4_col3, #T_712df_row5_col1, #T_712df_row5_col3, #T_712df_row6_col1, #T_712df_row6_col3, #T_712df_row7_col1, #T_712df_row7_col3 {\n",
+       "  background-color: #013271;\n",
+       "  color: #f1f1f1;\n",
+       "}\n",
+       "#T_712df_row4_col2, #T_712df_row4_col4 {\n",
+       "  background-color: #787877;\n",
+       "  color: #f1f1f1;\n",
+       "}\n",
+       "#T_712df_row5_col2, #T_712df_row5_col4 {\n",
+       "  background-color: #888578;\n",
+       "  color: #f1f1f1;\n",
+       "}\n",
+       "#T_712df_row6_col2, #T_712df_row6_col4 {\n",
+       "  background-color: #979177;\n",
+       "  color: #f1f1f1;\n",
+       "}\n",
+       "#T_712df_row7_col2, #T_712df_row7_col4 {\n",
+       "  background-color: #a89e73;\n",
+       "  color: #f1f1f1;\n",
+       "}\n",
+       "#T_712df_row8_col2, #T_712df_row8_col4 {\n",
+       "  background-color: #b5a86f;\n",
+       "  color: #f1f1f1;\n",
+       "}\n",
+       "#T_712df_row9_col2, #T_712df_row9_col4 {\n",
+       "  background-color: #c2b369;\n",
+       "  color: #000000;\n",
+       "}\n",
+       "#T_712df_row10_col1, #T_712df_row10_col2, #T_712df_row10_col3, #T_712df_row10_col4 {\n",
+       "  background-color: #fee838;\n",
+       "  color: #000000;\n",
+       "}\n",
+       "</style>\n",
+       "<table id=\"T_712df\">\n",
+       "  <caption><h2>Counts of <b>data</b></h2></caption>\n",
+       "  <thead>\n",
+       "    <tr>\n",
+       "      <th class=\"blank level0\" >&nbsp;</th>\n",
+       "      <th id=\"T_712df_level0_col0\" class=\"col_heading level0 col0\" >data</th>\n",
+       "      <th id=\"T_712df_level0_col1\" class=\"col_heading level0 col1\" >count</th>\n",
+       "      <th id=\"T_712df_level0_col2\" class=\"col_heading level0 col2\" >cum_count</th>\n",
+       "      <th id=\"T_712df_level0_col3\" class=\"col_heading level0 col3\" >perc</th>\n",
+       "      <th id=\"T_712df_level0_col4\" class=\"col_heading level0 col4\" >cum_perc</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th id=\"T_712df_level0_row0\" class=\"row_heading level0 row0\" >0</th>\n",
+       "      <td id=\"T_712df_row0_col0\" class=\"data row0 col0\" >e</td>\n",
+       "      <td id=\"T_712df_row0_col1\" class=\"data row0 col1\" >12</td>\n",
+       "      <td id=\"T_712df_row0_col2\" class=\"data row0 col2\" >12</td>\n",
+       "      <td id=\"T_712df_row0_col3\" class=\"data row0 col3\" >16.2%</td>\n",
+       "      <td id=\"T_712df_row0_col4\" class=\"data row0 col4\" >16.2%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th id=\"T_712df_level0_row1\" class=\"row_heading level0 row1\" >1</th>\n",
+       "      <td id=\"T_712df_row1_col0\" class=\"data row1 col0\" >d</td>\n",
+       "      <td id=\"T_712df_row1_col1\" class=\"data row1 col1\" >10</td>\n",
+       "      <td id=\"T_712df_row1_col2\" class=\"data row1 col2\" >22</td>\n",
+       "      <td id=\"T_712df_row1_col3\" class=\"data row1 col3\" >13.5%</td>\n",
+       "      <td id=\"T_712df_row1_col4\" class=\"data row1 col4\" >29.7%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th id=\"T_712df_level0_row2\" class=\"row_heading level0 row2\" >2</th>\n",
+       "      <td id=\"T_712df_row2_col0\" class=\"data row2 col0\" >a</td>\n",
+       "      <td id=\"T_712df_row2_col1\" class=\"data row2 col1\" >9</td>\n",
+       "      <td id=\"T_712df_row2_col2\" class=\"data row2 col2\" >31</td>\n",
+       "      <td id=\"T_712df_row2_col3\" class=\"data row2 col3\" >12.2%</td>\n",
+       "      <td id=\"T_712df_row2_col4\" class=\"data row2 col4\" >41.9%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th id=\"T_712df_level0_row3\" class=\"row_heading level0 row3\" >3</th>\n",
+       "      <td id=\"T_712df_row3_col0\" class=\"data row3 col0\" >m</td>\n",
+       "      <td id=\"T_712df_row3_col1\" class=\"data row3 col1\" >7</td>\n",
+       "      <td id=\"T_712df_row3_col2\" class=\"data row3 col2\" >38</td>\n",
+       "      <td id=\"T_712df_row3_col3\" class=\"data row3 col3\" >9.5%</td>\n",
+       "      <td id=\"T_712df_row3_col4\" class=\"data row3 col4\" >51.4%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th id=\"T_712df_level0_row4\" class=\"row_heading level0 row4\" >4</th>\n",
+       "      <td id=\"T_712df_row4_col0\" class=\"data row4 col0\" >b</td>\n",
+       "      <td id=\"T_712df_row4_col1\" class=\"data row4 col1\" >4</td>\n",
+       "      <td id=\"T_712df_row4_col2\" class=\"data row4 col2\" >42</td>\n",
+       "      <td id=\"T_712df_row4_col3\" class=\"data row4 col3\" >5.4%</td>\n",
+       "      <td id=\"T_712df_row4_col4\" class=\"data row4 col4\" >56.8%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th id=\"T_712df_level0_row5\" class=\"row_heading level0 row5\" >5</th>\n",
+       "      <td id=\"T_712df_row5_col0\" class=\"data row5 col0\" >f</td>\n",
+       "      <td id=\"T_712df_row5_col1\" class=\"data row5 col1\" >4</td>\n",
+       "      <td id=\"T_712df_row5_col2\" class=\"data row5 col2\" >46</td>\n",
+       "      <td id=\"T_712df_row5_col3\" class=\"data row5 col3\" >5.4%</td>\n",
+       "      <td id=\"T_712df_row5_col4\" class=\"data row5 col4\" >62.2%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th id=\"T_712df_level0_row6\" class=\"row_heading level0 row6\" >6</th>\n",
+       "      <td id=\"T_712df_row6_col0\" class=\"data row6 col0\" >j</td>\n",
+       "      <td id=\"T_712df_row6_col1\" class=\"data row6 col1\" >4</td>\n",
+       "      <td id=\"T_712df_row6_col2\" class=\"data row6 col2\" >50</td>\n",
+       "      <td id=\"T_712df_row6_col3\" class=\"data row6 col3\" >5.4%</td>\n",
+       "      <td id=\"T_712df_row6_col4\" class=\"data row6 col4\" >67.6%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th id=\"T_712df_level0_row7\" class=\"row_heading level0 row7\" >7</th>\n",
+       "      <td id=\"T_712df_row7_col0\" class=\"data row7 col0\" >l</td>\n",
+       "      <td id=\"T_712df_row7_col1\" class=\"data row7 col1\" >4</td>\n",
+       "      <td id=\"T_712df_row7_col2\" class=\"data row7 col2\" >54</td>\n",
+       "      <td id=\"T_712df_row7_col3\" class=\"data row7 col3\" >5.4%</td>\n",
+       "      <td id=\"T_712df_row7_col4\" class=\"data row7 col4\" >73.0%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th id=\"T_712df_level0_row8\" class=\"row_heading level0 row8\" >8</th>\n",
+       "      <td id=\"T_712df_row8_col0\" class=\"data row8 col0\" >c</td>\n",
+       "      <td id=\"T_712df_row8_col1\" class=\"data row8 col1\" >3</td>\n",
+       "      <td id=\"T_712df_row8_col2\" class=\"data row8 col2\" >57</td>\n",
+       "      <td id=\"T_712df_row8_col3\" class=\"data row8 col3\" >4.1%</td>\n",
+       "      <td id=\"T_712df_row8_col4\" class=\"data row8 col4\" >77.0%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th id=\"T_712df_level0_row9\" class=\"row_heading level0 row9\" >9</th>\n",
+       "      <td id=\"T_712df_row9_col0\" class=\"data row9 col0\" >g</td>\n",
+       "      <td id=\"T_712df_row9_col1\" class=\"data row9 col1\" >3</td>\n",
+       "      <td id=\"T_712df_row9_col2\" class=\"data row9 col2\" >60</td>\n",
+       "      <td id=\"T_712df_row9_col3\" class=\"data row9 col3\" >4.1%</td>\n",
+       "      <td id=\"T_712df_row9_col4\" class=\"data row9 col4\" >81.1%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th id=\"T_712df_level0_row10\" class=\"row_heading level0 row10\" >10</th>\n",
+       "      <td id=\"T_712df_row10_col0\" class=\"data row10 col0\" >Others:</td>\n",
+       "      <td id=\"T_712df_row10_col1\" class=\"data row10 col1\" >14</td>\n",
+       "      <td id=\"T_712df_row10_col2\" class=\"data row10 col2\" >74</td>\n",
+       "      <td id=\"T_712df_row10_col3\" class=\"data row10 col3\" >18.9%</td>\n",
+       "      <td id=\"T_712df_row10_col4\" class=\"data row10 col4\" >100.0%</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n"
+      ],
       "text/plain": [
-       "2"
+       "<pandas.io.formats.style.Styler>"
       ]
      },
      "execution_count": null,
@@ -73,20 +246,13 @@
     }
    ],
    "source": [
-    "1+1"
+    "value_counts_plus(list('aaaaaaaaabbbbcccddddddddddeeeeeeeeeeeeffffggghhhiijjjjkkkllllmmmmmmmnnooop'))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "python3",
    "language": "python",
    "name": "python3"
   }
