Fix import issue + bump version to 0.0.3

--- a/nbs/00_value_counts_plus.ipynb
+++ b/nbs/00_value_counts_plus.ipynb
@@ -35,8 +35,16 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "import pandas as pd\n",
-    "\n",
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| export\n",
     "def value_counts_plus(\n",
     "    series,\n",
     "    dropna=False,\n",
@@ -1109,6 +1117,13 @@
    "display_name": "python3",
    "language": "python",
    "name": "python3"
+  },
+  "widgets": {
+   "application/vnd.jupyter.widget-state+json": {
+    "state": {},
+    "version_major": 2,
+    "version_minor": 0
+   }
   }
  },
  "nbformat": 4,
