Add new status_codes function and docs

--- a/nbs/00_value_counts_plus.ipynb
+++ b/nbs/00_value_counts_plus.ipynb
@@ -54,7 +54,7 @@
     "    background_gradient='cividis'):\n",
     "    \"\"\"\n",
     "    Provide a few ways of showing counts of values of items in ``series``.\n",
-    "    \n",
+    "\n",
     "    Parameters\n",
     "    ----------\n",
     "    series : pandas Series or list\n",
@@ -110,6 +110,18 @@
    "metadata": {},
    "source": [
     "### Counting a list of status codes - default"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import random\n",
+    "from http import HTTPStatus\n",
+    "\n",
+    "import pandas as pd"
    ]
   },
   {
@@ -284,10 +296,6 @@
     }
    ],
    "source": [
-    "import random\n",
-    "from http import HTTPStatus\n",
-    "\n",
-    "import pandas as pd\n",
     "\n",
     "status_codes = random.choices(\n",
     "    [s.value for s in HTTPStatus],\n",
