Hide assert statements

--- a/nbs/00_value_counts_plus.ipynb
+++ b/nbs/00_value_counts_plus.ipynb
@@ -330,6 +330,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#| hide\n",
     "assert type(value_counts_plus(status_codes)) == pd.io.formats.style.Styler"
    ]
   },
@@ -585,6 +586,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#| hide\n",
     "assert value_counts_plus(status_codes, show_top=15, style=False).shape[0] == 16"
    ]
   },
@@ -780,6 +782,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#| hide\n",
     "assert value_counts_plus(status_codes, sort_others=True, style=False)['data'].iloc[0] == 'Others:'"
    ]
   },
@@ -946,6 +949,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#| hide\n",
     "assert type(value_counts_plus(status_codes, style=False)) == pd.DataFrame"
    ]
   },
