--- a/nbs/01_status_codes.ipynb
+++ b/nbs/01_status_codes.ipynb
@@ -725,6 +725,7 @@
           "500",
           "Status codes"
          ],
+         "level": "Status codes",
          "marker": {
           "line": {
            "width": 0.01
