Fix value_counts naming issue in pandas 2 vs < 2

--- a/nbs/00_value_counts_plus_slides.ipynb
+++ b/nbs/00_value_counts_plus_slides.ipynb
@@ -78,26 +78,26 @@
     {
      "data": {
       "text/plain": [
-       "['aliceblue',\n",
-       " 'palegoldenrod',\n",
-       " 'paleturquoise',\n",
-       " 'goldenrod',\n",
-       " 'antiquewhite',\n",
-       " 'linen',\n",
-       " 'mediumblue',\n",
-       " 'lightseagreen',\n",
-       " 'steelblue',\n",
-       " 'grey',\n",
+       "['red',\n",
        " 'deeppink',\n",
-       " 'chartreuse',\n",
-       " 'grey',\n",
-       " 'slategray',\n",
+       " 'indigo',\n",
+       " 'mediumslateblue',\n",
+       " 'darkmagenta',\n",
+       " 'sienna',\n",
+       " 'darkmagenta',\n",
+       " 'salmon',\n",
+       " 'lavenderblush',\n",
+       " 'burlywood',\n",
+       " 'darkred',\n",
+       " 'dodgerblue',\n",
+       " 'navajowhite',\n",
+       " 'navajowhite',\n",
+       " 'navajowhite',\n",
+       " 'tomato',\n",
+       " 'white',\n",
        " 'olivedrab',\n",
-       " 'papayawhip',\n",
-       " 'mediumseagreen',\n",
-       " 'paleturquoise',\n",
-       " 'crimson',\n",
-       " 'slategray']"
+       " 'fuchsia',\n",
+       " 'lemonchiffon']"
       ]
      },
      "execution_count": null,
