Fix formatting issue for renamed columns

--- a/nbs/00_value_counts_plus.ipynb
+++ b/nbs/00_value_counts_plus.ipynb
@@ -129,9 +129,9 @@
     "    return (count_df\n",
     "            .style\n",
     "            .format({'count': '{:,}', 'cumsum': '{:,}', \n",
-    "                     'perc': '{:.1%}',\n",
-    "                     'cum_count': '{:,}',\n",
-    "                     'cum_perc': '{:.1%}'},\n",
+    "                     '%': '{:.1%}',\n",
+    "                     'cum. count': '{:,}',\n",
+    "                     'cum. %': '{:.1%}'},\n",
     "                    thousands=thousands,\n",
     "                    decimal=decimal)\n",
     "            .background_gradient(background_gradient)\n",
