Add new url_structure functionality with slides

--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -361,7 +361,7 @@
     }
    ],
    "source": [
-    "codes = pd.read_csv('_data/status_codes.csv')\n",
+    "codes = pd.read_csv('data/status_codes.csv')\n",
     "codes"
    ]
   },
