Make slides touch-scrollable with controls

--- a/nbs/00_value_counts_plus_slides.ipynb
+++ b/nbs/00_value_counts_plus_slides.ipynb
@@ -10,6 +10,8 @@
     "  revealjs:\n",
     "    slide-number: true\n",
     "    scrollable: true\n",
+    "    touch: true\n",
+    "    controls: true\n",
     "---"
    ]
   },
