Add dot ./ to data file path

--- a/nbs/02_url_structure.ipynb
+++ b/nbs/02_url_structure.ipynb
@@ -256,7 +256,7 @@
     "import pandas as pd\n",
     "import os\n",
     "print(os.listdir())\n",
-    "apple = pd.read_csv('data/apple_url_list.csv')\n",
+    "apple = pd.read_csv('./data/apple_url_list.csv')\n",
     "apple.head(10)"
    ]
   },
