--- a/nbs/02_url_structure.ipynb
+++ b/nbs/02_url_structure.ipynb
@@ -154,13 +154,6 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['_quarto.yml', '00_value_counts_plus_slides.ipynb', '00_value_counts_plus.ipynb', 'sidebar.yml', 'styles.css', '_docs', '.last_checked', '01_status_codes.ipynb', 'nbdev.yml', '.gitignore', '03_racing_chart.ipynb', '.ipynb_checkpoints', '02_url_structure.ipynb', '04_flag.ipynb', '02_url_structure_slides.ipynb', 'data', '.quarto', 'index.ipynb']\n"
-     ]
-    },
-    {
      "data": {
       "text/html": [
        "<div>\n",
@@ -255,8 +248,8 @@
     "import adviz\n",
     "import pandas as pd\n",
     "import os\n",
-    "print(os.listdir())\n",
-    "apple = pd.read_csv('./data/apple_url_list.csv')\n",
+    "filepath = os.path.abspath('data/apple_url_list.csv')\n",
+    "apple = pd.read_csv(filepath)\n",
     "apple.head(10)"
    ]
   },
