Use pathlib for abspath

--- a/nbs/02_url_structure.ipynb
+++ b/nbs/02_url_structure.ipynb
@@ -248,7 +248,8 @@
     "import adviz\n",
     "import pandas as pd\n",
     "import os\n",
-    "filepath = os.path.abspath('data/apple_url_list.csv')\n",
+    "from pathlib import Path\n",
+    "filepath = Path('data/apple_url_list.csv').absolute()\n",
     "apple = pd.read_csv(filepath)\n",
     "apple.head(10)"
    ]
