Add testing os.lisdir for debugging

--- a/nbs/02_url_structure.ipynb
+++ b/nbs/02_url_structure.ipynb
@@ -248,6 +248,7 @@
     "import adviz\n",
     "import pandas as pd\n",
     "import os\n",
+    "print(os.lisdir())\n",
     "from pathlib import Path\n",
     "filepath = Path('data/apple_url_list.csv').absolute()\n",
     "apple = pd.read_csv(filepath)\n",
