Add /nbs/ to filepath

--- a/nbs/02_url_structure.ipynb
+++ b/nbs/02_url_structure.ipynb
@@ -250,7 +250,7 @@
     "import os\n",
     "print(os.listdir())\n",
     "from pathlib import Path\n",
-    "filepath = Path('data/apple_url_list.csv').absolute()\n",
+    "filepath = Path('nbs/data/apple_url_list.csv').absolute()\n",
     "apple = pd.read_csv(filepath)\n",
     "apple.head(10)"
    ]
