Set apple csv file location based on cwd

--- a/nbs/02_url_structure.ipynb
+++ b/nbs/02_url_structure.ipynb
@@ -247,10 +247,13 @@
     "import advertools as adv\n",
     "import adviz\n",
     "import pandas as pd\n",
-    "import os\n",
-    "print(os.listdir())\n",
     "from pathlib import Path\n",
-    "filepath = Path('nbs/data/apple_url_list.csv').absolute()\n",
+    "import os\n",
+    "if os.getcwd().endswith('/nbs'):\n",
+    "    filepath = 'data/apple_url_list.csv'\n",
+    "else:\n",
+    "    filepath = 'nbs/data/apple_url_list.csv'\n",
+    "\n",
     "apple = pd.read_csv(filepath)\n",
     "apple.head(10)"
    ]
