Remove margin-left for demo period table

--- a/nbs/03_racing_chart.ipynb
+++ b/nbs/03_racing_chart.ipynb
@@ -140,92 +140,91 @@
     {
      "data": {
       "text/html": [
-       "<div style=\"margin-left: 20%\"><style type=\"text/css\">\n",
-       "#T_3e297_row0_col1, #T_3e297_row5_col1 {\n",
+       "<style type=\"text/css\">\n",
+       "#T_6f5cf_row0_col1, #T_6f5cf_row5_col1 {\n",
        "  width: 10em;\n",
        "  height: 80%;\n",
        "  background: linear-gradient(90deg,lightgray 100.0%, transparent 100.0%);\n",
        "}\n",
-       "#T_3e297_row0_col2, #T_3e297_row1_col2, #T_3e297_row2_col2, #T_3e297_row3_col2, #T_3e297_row4_col2 {\n",
+       "#T_6f5cf_row0_col2, #T_6f5cf_row1_col2, #T_6f5cf_row2_col2, #T_6f5cf_row3_col2, #T_6f5cf_row4_col2 {\n",
        "  background-color: #f7fbff;\n",
        "  color: #000000;\n",
        "}\n",
-       "#T_3e297_row1_col1, #T_3e297_row7_col1, #T_3e297_row8_col1, #T_3e297_row11_col1, #T_3e297_row15_col1 {\n",
+       "#T_6f5cf_row1_col1, #T_6f5cf_row7_col1, #T_6f5cf_row8_col1, #T_6f5cf_row11_col1, #T_6f5cf_row15_col1 {\n",
        "  width: 10em;\n",
        "  height: 80%;\n",
        "  background: linear-gradient(90deg,lightgray 60.0%, transparent 60.0%);\n",
        "}\n",
-       "#T_3e297_row2_col1 {\n",
+       "#T_6f5cf_row2_col1 {\n",
        "  width: 10em;\n",
        "  height: 80%;\n",
        "  background: linear-gradient(90deg,lightgray 24.0%, transparent 24.0%);\n",
        "}\n",
-       "#T_3e297_row3_col1 {\n",
+       "#T_6f5cf_row3_col1 {\n",
        "  width: 10em;\n",
        "  height: 80%;\n",
        "  background: linear-gradient(90deg,lightgray 12.0%, transparent 12.0%);\n",
        "}\n",
-       "#T_3e297_row4_col1, #T_3e297_row14_col1 {\n",
+       "#T_6f5cf_row4_col1, #T_6f5cf_row14_col1 {\n",
        "  width: 10em;\n",
        "  height: 80%;\n",
        "}\n",
-       "#T_3e297_row5_col2, #T_3e297_row6_col2, #T_3e297_row7_col2, #T_3e297_row8_col2, #T_3e297_row9_col2 {\n",
+       "#T_6f5cf_row5_col2, #T_6f5cf_row6_col2, #T_6f5cf_row7_col2, #T_6f5cf_row8_col2, #T_6f5cf_row9_col2 {\n",
        "  background-color: #abd0e6;\n",
        "  color: #000000;\n",
        "}\n",
-       "#T_3e297_row6_col1 {\n",
+       "#T_6f5cf_row6_col1 {\n",
        "  width: 10em;\n",
        "  height: 80%;\n",
        "  background: linear-gradient(90deg,lightgray 68.0%, transparent 68.0%);\n",
        "}\n",
-       "#T_3e297_row9_col1 {\n",
+       "#T_6f5cf_row9_col1 {\n",
        "  width: 10em;\n",
        "  height: 80%;\n",
        "  background: linear-gradient(90deg,lightgray 36.0%, transparent 36.0%);\n",
        "}\n",
-       "#T_3e297_row10_col1 {\n",
+       "#T_6f5cf_row10_col1 {\n",
        "  width: 10em;\n",
        "  height: 80%;\n",
        "  background: linear-gradient(90deg,lightgray 96.0%, transparent 96.0%);\n",
        "}\n",
-       "#T_3e297_row10_col2, #T_3e297_row11_col2, #T_3e297_row12_col2, #T_3e297_row13_col2, #T_3e297_row14_col2 {\n",
+       "#T_6f5cf_row10_col2, #T_6f5cf_row11_col2, #T_6f5cf_row12_col2, #T_6f5cf_row13_col2, #T_6f5cf_row14_col2 {\n",
        "  background-color: #3787c0;\n",
        "  color: #f1f1f1;\n",
        "}\n",
-       "#T_3e297_row12_col1, #T_3e297_row18_col1 {\n",
+       "#T_6f5cf_row12_col1, #T_6f5cf_row18_col1 {\n",
        "  width: 10em;\n",
        "  height: 80%;\n",
        "  background: linear-gradient(90deg,lightgray 40.0%, transparent 40.0%);\n",
        "}\n",
-       "#T_3e297_row13_col1 {\n",
+       "#T_6f5cf_row13_col1 {\n",
        "  width: 10em;\n",
        "  height: 80%;\n",
        "  background: linear-gradient(90deg,lightgray 32.0%, transparent 32.0%);\n",
        "}\n",
-       "#T_3e297_row15_col2, #T_3e297_row16_col2, #T_3e297_row17_col2, #T_3e297_row18_col2, #T_3e297_row19_col2 {\n",
+       "#T_6f5cf_row15_col2, #T_6f5cf_row16_col2, #T_6f5cf_row17_col2, #T_6f5cf_row18_col2, #T_6f5cf_row19_col2 {\n",
        "  background-color: #08306b;\n",
        "  color: #f1f1f1;\n",
        "}\n",
-       "#T_3e297_row16_col1 {\n",
+       "#T_6f5cf_row16_col1 {\n",
        "  width: 10em;\n",
        "  height: 80%;\n",
        "  background: linear-gradient(90deg,lightgray 56.0%, transparent 56.0%);\n",
        "}\n",
-       "#T_3e297_row17_col1 {\n",
+       "#T_6f5cf_row17_col1 {\n",
        "  width: 10em;\n",
        "  height: 80%;\n",
        "  background: linear-gradient(90deg,lightgray 44.0%, transparent 44.0%);\n",
        "}\n",
-       "#T_3e297_row19_col1 {\n",
+       "#T_6f5cf_row19_col1 {\n",
        "  width: 10em;\n",
        "  height: 80%;\n",
        "  background: linear-gradient(90deg,lightgray 16.0%, transparent 16.0%);\n",
        "}\n",
        "</style>\n",
-       "<table id=\"T_3e297_\">\n",
+       "<table id=\"T_6f5cf_\">\n",
        "  <thead>\n",
        "    <tr>\n",
-       "      <th class=\"blank level0\" >&nbsp;</th>\n",
        "      <th class=\"col_heading level0 col0\" >entity</th>\n",
        "      <th class=\"col_heading level0 col1\" >metric</th>\n",
        "      <th class=\"col_heading level0 col2\" >period</th>\n",
@@ -233,128 +232,107 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th id=\"T_3e297_level0_row0\" class=\"row_heading level0 row0\" >0</th>\n",
-       "      <td id=\"T_3e297_row0_col0\" class=\"data row0 col0\" >green</td>\n",
-       "      <td id=\"T_3e297_row0_col1\" class=\"data row0 col1\" >35</td>\n",
-       "      <td id=\"T_3e297_row0_col2\" class=\"data row0 col2\" >1</td>\n",
+       "      <td id=\"T_6f5cf_row0_col0\" class=\"data row0 col0\" >green</td>\n",
+       "      <td id=\"T_6f5cf_row0_col1\" class=\"data row0 col1\" >35</td>\n",
+       "      <td id=\"T_6f5cf_row0_col2\" class=\"data row0 col2\" >1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_3e297_level0_row1\" class=\"row_heading level0 row1\" >1</th>\n",
-       "      <td id=\"T_3e297_row1_col0\" class=\"data row1 col0\" >red</td>\n",
-       "      <td id=\"T_3e297_row1_col1\" class=\"data row1 col1\" >25</td>\n",
-       "      <td id=\"T_3e297_row1_col2\" class=\"data row1 col2\" >1</td>\n",
+       "      <td id=\"T_6f5cf_row1_col0\" class=\"data row1 col0\" >red</td>\n",
+       "      <td id=\"T_6f5cf_row1_col1\" class=\"data row1 col1\" >25</td>\n",
+       "      <td id=\"T_6f5cf_row1_col2\" class=\"data row1 col2\" >1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_3e297_level0_row2\" class=\"row_heading level0 row2\" >2</th>\n",
-       "      <td id=\"T_3e297_row2_col0\" class=\"data row2 col0\" >blue</td>\n",
-       "      <td id=\"T_3e297_row2_col1\" class=\"data row2 col1\" >16</td>\n",
-       "      <td id=\"T_3e297_row2_col2\" class=\"data row2 col2\" >1</td>\n",
+       "      <td id=\"T_6f5cf_row2_col0\" class=\"data row2 col0\" >blue</td>\n",
+       "      <td id=\"T_6f5cf_row2_col1\" class=\"data row2 col1\" >16</td>\n",
+       "      <td id=\"T_6f5cf_row2_col2\" class=\"data row2 col2\" >1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_3e297_level0_row3\" class=\"row_heading level0 row3\" >3</th>\n",
-       "      <td id=\"T_3e297_row3_col0\" class=\"data row3 col0\" >orange</td>\n",
-       "      <td id=\"T_3e297_row3_col1\" class=\"data row3 col1\" >13</td>\n",
-       "      <td id=\"T_3e297_row3_col2\" class=\"data row3 col2\" >1</td>\n",
+       "      <td id=\"T_6f5cf_row3_col0\" class=\"data row3 col0\" >orange</td>\n",
+       "      <td id=\"T_6f5cf_row3_col1\" class=\"data row3 col1\" >13</td>\n",
+       "      <td id=\"T_6f5cf_row3_col2\" class=\"data row3 col2\" >1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_3e297_level0_row4\" class=\"row_heading level0 row4\" >4</th>\n",
-       "      <td id=\"T_3e297_row4_col0\" class=\"data row4 col0\" >yellow</td>\n",
-       "      <td id=\"T_3e297_row4_col1\" class=\"data row4 col1\" >10</td>\n",
-       "      <td id=\"T_3e297_row4_col2\" class=\"data row4 col2\" >1</td>\n",
+       "      <td id=\"T_6f5cf_row4_col0\" class=\"data row4 col0\" >yellow</td>\n",
+       "      <td id=\"T_6f5cf_row4_col1\" class=\"data row4 col1\" >10</td>\n",
+       "      <td id=\"T_6f5cf_row4_col2\" class=\"data row4 col2\" >1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_3e297_level0_row5\" class=\"row_heading level0 row5\" >5</th>\n",
-       "      <td id=\"T_3e297_row5_col0\" class=\"data row5 col0\" >blue</td>\n",
-       "      <td id=\"T_3e297_row5_col1\" class=\"data row5 col1\" >35</td>\n",
-       "      <td id=\"T_3e297_row5_col2\" class=\"data row5 col2\" >2</td>\n",
+       "      <td id=\"T_6f5cf_row5_col0\" class=\"data row5 col0\" >blue</td>\n",
+       "      <td id=\"T_6f5cf_row5_col1\" class=\"data row5 col1\" >35</td>\n",
+       "      <td id=\"T_6f5cf_row5_col2\" class=\"data row5 col2\" >2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_3e297_level0_row6\" class=\"row_heading level0 row6\" >6</th>\n",
-       "      <td id=\"T_3e297_row6_col0\" class=\"data row6 col0\" >red</td>\n",
-       "      <td id=\"T_3e297_row6_col1\" class=\"data row6 col1\" >27</td>\n",
-       "      <td id=\"T_3e297_row6_col2\" class=\"data row6 col2\" >2</td>\n",
+       "      <td id=\"T_6f5cf_row6_col0\" class=\"data row6 col0\" >red</td>\n",
+       "      <td id=\"T_6f5cf_row6_col1\" class=\"data row6 col1\" >27</td>\n",
+       "      <td id=\"T_6f5cf_row6_col2\" class=\"data row6 col2\" >2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_3e297_level0_row7\" class=\"row_heading level0 row7\" >7</th>\n",
-       "      <td id=\"T_3e297_row7_col0\" class=\"data row7 col0\" >green</td>\n",
-       "      <td id=\"T_3e297_row7_col1\" class=\"data row7 col1\" >25</td>\n",
-       "      <td id=\"T_3e297_row7_col2\" class=\"data row7 col2\" >2</td>\n",
+       "      <td id=\"T_6f5cf_row7_col0\" class=\"data row7 col0\" >green</td>\n",
+       "      <td id=\"T_6f5cf_row7_col1\" class=\"data row7 col1\" >25</td>\n",
+       "      <td id=\"T_6f5cf_row7_col2\" class=\"data row7 col2\" >2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_3e297_level0_row8\" class=\"row_heading level0 row8\" >8</th>\n",
-       "      <td id=\"T_3e297_row8_col0\" class=\"data row8 col0\" >yellow</td>\n",
-       "      <td id=\"T_3e297_row8_col1\" class=\"data row8 col1\" >25</td>\n",
-       "      <td id=\"T_3e297_row8_col2\" class=\"data row8 col2\" >2</td>\n",
+       "      <td id=\"T_6f5cf_row8_col0\" class=\"data row8 col0\" >yellow</td>\n",
+       "      <td id=\"T_6f5cf_row8_col1\" class=\"data row8 col1\" >25</td>\n",
+       "      <td id=\"T_6f5cf_row8_col2\" class=\"data row8 col2\" >2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_3e297_level0_row9\" class=\"row_heading level0 row9\" >9</th>\n",
-       "      <td id=\"T_3e297_row9_col0\" class=\"data row9 col0\" >orange</td>\n",
-       "      <td id=\"T_3e297_row9_col1\" class=\"data row9 col1\" >19</td>\n",
-       "      <td id=\"T_3e297_row9_col2\" class=\"data row9 col2\" >2</td>\n",
+       "      <td id=\"T_6f5cf_row9_col0\" class=\"data row9 col0\" >orange</td>\n",
+       "      <td id=\"T_6f5cf_row9_col1\" class=\"data row9 col1\" >19</td>\n",
+       "      <td id=\"T_6f5cf_row9_col2\" class=\"data row9 col2\" >2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_3e297_level0_row10\" class=\"row_heading level0 row10\" >10</th>\n",
-       "      <td id=\"T_3e297_row10_col0\" class=\"data row10 col0\" >yellow</td>\n",
-       "      <td id=\"T_3e297_row10_col1\" class=\"data row10 col1\" >34</td>\n",
-       "      <td id=\"T_3e297_row10_col2\" class=\"data row10 col2\" >3</td>\n",
+       "      <td id=\"T_6f5cf_row10_col0\" class=\"data row10 col0\" >yellow</td>\n",
+       "      <td id=\"T_6f5cf_row10_col1\" class=\"data row10 col1\" >34</td>\n",
+       "      <td id=\"T_6f5cf_row10_col2\" class=\"data row10 col2\" >3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_3e297_level0_row11\" class=\"row_heading level0 row11\" >11</th>\n",
-       "      <td id=\"T_3e297_row11_col0\" class=\"data row11 col0\" >orange</td>\n",
-       "      <td id=\"T_3e297_row11_col1\" class=\"data row11 col1\" >25</td>\n",
-       "      <td id=\"T_3e297_row11_col2\" class=\"data row11 col2\" >3</td>\n",
+       "      <td id=\"T_6f5cf_row11_col0\" class=\"data row11 col0\" >orange</td>\n",
+       "      <td id=\"T_6f5cf_row11_col1\" class=\"data row11 col1\" >25</td>\n",
+       "      <td id=\"T_6f5cf_row11_col2\" class=\"data row11 col2\" >3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_3e297_level0_row12\" class=\"row_heading level0 row12\" >12</th>\n",
-       "      <td id=\"T_3e297_row12_col0\" class=\"data row12 col0\" >red</td>\n",
-       "      <td id=\"T_3e297_row12_col1\" class=\"data row12 col1\" >20</td>\n",
-       "      <td id=\"T_3e297_row12_col2\" class=\"data row12 col2\" >3</td>\n",
+       "      <td id=\"T_6f5cf_row12_col0\" class=\"data row12 col0\" >red</td>\n",
+       "      <td id=\"T_6f5cf_row12_col1\" class=\"data row12 col1\" >20</td>\n",
+       "      <td id=\"T_6f5cf_row12_col2\" class=\"data row12 col2\" >3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_3e297_level0_row13\" class=\"row_heading level0 row13\" >13</th>\n",
-       "      <td id=\"T_3e297_row13_col0\" class=\"data row13 col0\" >green</td>\n",
-       "      <td id=\"T_3e297_row13_col1\" class=\"data row13 col1\" >18</td>\n",
-       "      <td id=\"T_3e297_row13_col2\" class=\"data row13 col2\" >3</td>\n",
+       "      <td id=\"T_6f5cf_row13_col0\" class=\"data row13 col0\" >green</td>\n",
+       "      <td id=\"T_6f5cf_row13_col1\" class=\"data row13 col1\" >18</td>\n",
+       "      <td id=\"T_6f5cf_row13_col2\" class=\"data row13 col2\" >3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_3e297_level0_row14\" class=\"row_heading level0 row14\" >14</th>\n",
-       "      <td id=\"T_3e297_row14_col0\" class=\"data row14 col0\" >blue</td>\n",
-       "      <td id=\"T_3e297_row14_col1\" class=\"data row14 col1\" >10</td>\n",
-       "      <td id=\"T_3e297_row14_col2\" class=\"data row14 col2\" >3</td>\n",
+       "      <td id=\"T_6f5cf_row14_col0\" class=\"data row14 col0\" >blue</td>\n",
+       "      <td id=\"T_6f5cf_row14_col1\" class=\"data row14 col1\" >10</td>\n",
+       "      <td id=\"T_6f5cf_row14_col2\" class=\"data row14 col2\" >3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_3e297_level0_row15\" class=\"row_heading level0 row15\" >15</th>\n",
-       "      <td id=\"T_3e297_row15_col0\" class=\"data row15 col0\" >yellow</td>\n",
-       "      <td id=\"T_3e297_row15_col1\" class=\"data row15 col1\" >25</td>\n",
-       "      <td id=\"T_3e297_row15_col2\" class=\"data row15 col2\" >4</td>\n",
+       "      <td id=\"T_6f5cf_row15_col0\" class=\"data row15 col0\" >yellow</td>\n",
+       "      <td id=\"T_6f5cf_row15_col1\" class=\"data row15 col1\" >25</td>\n",
+       "      <td id=\"T_6f5cf_row15_col2\" class=\"data row15 col2\" >4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_3e297_level0_row16\" class=\"row_heading level0 row16\" >16</th>\n",
-       "      <td id=\"T_3e297_row16_col0\" class=\"data row16 col0\" >green</td>\n",
-       "      <td id=\"T_3e297_row16_col1\" class=\"data row16 col1\" >24</td>\n",
-       "      <td id=\"T_3e297_row16_col2\" class=\"data row16 col2\" >4</td>\n",
+       "      <td id=\"T_6f5cf_row16_col0\" class=\"data row16 col0\" >green</td>\n",
+       "      <td id=\"T_6f5cf_row16_col1\" class=\"data row16 col1\" >24</td>\n",
+       "      <td id=\"T_6f5cf_row16_col2\" class=\"data row16 col2\" >4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_3e297_level0_row17\" class=\"row_heading level0 row17\" >17</th>\n",
-       "      <td id=\"T_3e297_row17_col0\" class=\"data row17 col0\" >orange</td>\n",
-       "      <td id=\"T_3e297_row17_col1\" class=\"data row17 col1\" >21</td>\n",
-       "      <td id=\"T_3e297_row17_col2\" class=\"data row17 col2\" >4</td>\n",
+       "      <td id=\"T_6f5cf_row17_col0\" class=\"data row17 col0\" >orange</td>\n",
+       "      <td id=\"T_6f5cf_row17_col1\" class=\"data row17 col1\" >21</td>\n",
+       "      <td id=\"T_6f5cf_row17_col2\" class=\"data row17 col2\" >4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_3e297_level0_row18\" class=\"row_heading level0 row18\" >18</th>\n",
-       "      <td id=\"T_3e297_row18_col0\" class=\"data row18 col0\" >blue</td>\n",
-       "      <td id=\"T_3e297_row18_col1\" class=\"data row18 col1\" >20</td>\n",
-       "      <td id=\"T_3e297_row18_col2\" class=\"data row18 col2\" >4</td>\n",
+       "      <td id=\"T_6f5cf_row18_col0\" class=\"data row18 col0\" >blue</td>\n",
+       "      <td id=\"T_6f5cf_row18_col1\" class=\"data row18 col1\" >20</td>\n",
+       "      <td id=\"T_6f5cf_row18_col2\" class=\"data row18 col2\" >4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_3e297_level0_row19\" class=\"row_heading level0 row19\" >19</th>\n",
-       "      <td id=\"T_3e297_row19_col0\" class=\"data row19 col0\" >red</td>\n",
-       "      <td id=\"T_3e297_row19_col1\" class=\"data row19 col1\" >14</td>\n",
-       "      <td id=\"T_3e297_row19_col2\" class=\"data row19 col2\" >4</td>\n",
+       "      <td id=\"T_6f5cf_row19_col0\" class=\"data row19 col0\" >red</td>\n",
+       "      <td id=\"T_6f5cf_row19_col1\" class=\"data row19 col1\" >14</td>\n",
+       "      <td id=\"T_6f5cf_row19_col2\" class=\"data row19 col2\" >4</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
-       "</table>\n",
-       "</div>"
+       "</table>\n"
       ]
      },
      "metadata": {},
@@ -374,11 +352,14 @@
     "    'period': [i for i in range(1, 5) for x in range(5)],\n",
     "}).sort_values(['period', 'metric'],\n",
     "              ascending=[True, False]).reset_index(drop=True)\n",
-    "display_html('<div style=\"margin-left: 20%\">' + df\n",
+    "display_html(#'<div style=\"margin-left: 20%\">' + \n",
+    "             df\n",
     " .style\n",
+    " .hide_index()\n",
     " .bar(subset=['metric'], color='lightgray')\n",
     " .background_gradient(subset=['period'], cmap='Blues')\n",
-    " .to_html() + '</div>'\n",
+    " .to_html() \n",
+    "             # + '</div>'\n",
     ", raw=True)"
    ]
   },
