Fix calculation mistake

--- a/nbs/00_value_counts_plus_slides.ipynb
+++ b/nbs/00_value_counts_plus_slides.ipynb
@@ -1730,8 +1730,7 @@
    "id": "5244b1d0-295d-43fb-8c33-b749cc8ada79",
    "metadata": {},
    "source": [
-    "* Seventy countries have a life expectancy in (70, 80].\n",
-    "* 66.2% of countries have a life expectancy in (50, 80] (first two rows combined)"
+    "* Seventy countries (49.3%) have a life expectancy in (70, 80]."
    ]
   },
   {
