--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -15,16 +15,20 @@
    "source": [
     "# adviz\n",
     "\n",
-    "> `adv`ertools `vis`ualizations: `adviz`\n",
-    "\n",
-    "> Various charts that might be useful in your workflow while using [`advertools`](https://github.com/eliasdabbas/advertools) or other packages as well.\n"
+    "> `adv`ertools `vis`ualizations: `adviz`"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Get startd quickly and see exmaples below"
+    "## About\n",
+    "\n",
+    "[`advertools`](https://github.com/eliasdabbas/advertools) is a package for the search (SEO/SEM) and digital marketing practitioner. It aims to help with various productivity and analysis tools.\n",
+    "\n",
+    "Part of the analysis process is producing specialized charts that tend to come up all the time. So, `adviz` aims to be a collection of charts that can help `advertools` users. Many of the charts can be used for many other workflows, and are not marketing-specific. Feel free to use, share, and suggest features for any of them.\n",
+    "\n",
+    "Get startd quickly and see exmaples below:"
    ]
   },
   {
