Add directive to prevent quarto table processing

--- a/nbs/00_value_counts_plus.ipynb
+++ b/nbs/00_value_counts_plus.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "html-table-processing: none\n",
+    "---"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
