--- a/nbs/00_value_counts_plus_slides.ipynb
+++ b/nbs/00_value_counts_plus_slides.ipynb
@@ -12,6 +12,7 @@
     "    scrollable: true\n",
     "    touch: true\n",
     "    controls: true\n",
+    "html-table-processing: none\n",
     "---"
    ]
   },
