Update nbs docs

--- a/nbs/03_racing_chart.ipynb
+++ b/nbs/03_racing_chart.ipynb
@@ -42,7 +42,8 @@
     "import pandas as pd\n",
     "import plotly.express as px\n",
     "from plotly.subplots import make_subplots\n",
-    "import adviz"
+    "import adviz\n",
+    "from IPython.display import display_html"
    ]
   },
   {
@@ -331,8 +332,6 @@
     "#| code-fold: true\n",
     "# import random\n",
     "# [random.randint(10, 35) for i in range(20)]\n",
-    "\n",
-    "from IPython.display import display_html\n",
     "\n",
     "df = pd.DataFrame({\n",
     "    'entity': ['blue', 'green', 'yellow', 'red', 'orange'] * 4,\n",
