Prevent html table processing with full command

--- a/nbs/00_value_counts_plus.ipynb
+++ b/nbs/00_value_counts_plus.ipynb
@@ -5,7 +5,9 @@
    "metadata": {},
    "source": [
     "---\n",
-    "html-table-processing: none\n",
+    "format:\n",
+    "  html:\n",
+    "    html-table-processing: none\n",
     "---"
    ]
   },
