Fix ipython import issue

--- a/nbs/03_racing_chart.ipynb
+++ b/nbs/03_racing_chart.ipynb
@@ -28,7 +28,8 @@
    "outputs": [],
    "source": [
     "#| hide\n",
-    "from nbdev.showdoc import *"
+    "from nbdev.showdoc import *\n",
+    "from IPython.display import display_html"
    ]
   },
   {
@@ -42,8 +43,7 @@
     "import pandas as pd\n",
     "import plotly.express as px\n",
     "from plotly.subplots import make_subplots\n",
-    "import adviz\n",
-    "from IPython.display import display_html"
+    "import adviz"
    ]
   },
   {
