Lint status codes notebook

--- a/nbs/01_status_codes.ipynb
+++ b/nbs/01_status_codes.ipynb
@@ -36,7 +36,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| default_exp status_codes"
+    "# | default_exp status_codes"
    ]
   },
   {
@@ -46,7 +46,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| hide\n",
+    "# | hide\n",
     "from nbdev.showdoc import *"
    ]
   },
@@ -57,7 +57,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "# | export\n",
     "from http.client import responses\n",
     "\n",
     "import pandas as pd\n",
@@ -71,8 +71,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
-    "_texttemplate = '<b>%{label} </b><br><br>Status code: %{label} %{customdata[0]}<br>Count: %{value:,}<br>%{percentParent:.1%} of %{parent}<br>' #%{percentRoot:.1%} of %{root}'"
+    "# | export\n",
+    "_texttemplate = \"<b>%{label} </b><br><br>Status code: %{label} %{customdata[0]}<br>Count: %{value:,}<br>%{percentParent:.1%} of %{parent}<br>\"  # %{percentRoot:.1%} of %{root}'"
    ]
   },
   {
@@ -82,14 +82,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "# | export\n",
     "def status_codes(\n",
     "    status_list,\n",
     "    height=600,\n",
     "    width=None,\n",
-    "    theme='none',\n",
-    "    title='Status Codes',\n",
-    "    export_to_html=None):\n",
+    "    theme=\"none\",\n",
+    "    title=\"Status Codes\",\n",
+    "    export_to_html=None,\n",
+    "):\n",
     "    \"\"\"Create a treemap to visualize a list of status codes.\n",
     "\n",
     "    Parameters\n",
@@ -116,27 +117,26 @@
     "    status_codes_figure : plotly.graph_objects.Figure\n",
     "    \"\"\"\n",
     "    status_counts = pd.Series(status_list).value_counts().reset_index()\n",
-    "    status_counts.columns = ['status', 'count']\n",
-    "    status_counts = (status_counts\n",
-    "        .assign(status_cat=lambda df: df['status'].astype(int).round(-2))\n",
-    "        .assign(status_desc=lambda df: [responses[int(code)] for code in df['status']])\n",
-    "    )\n",
+    "    status_counts.columns = [\"status\", \"count\"]\n",
+    "    status_counts = status_counts.assign(\n",
+    "        status_cat=lambda df: df[\"status\"].astype(int).round(-2)\n",
+    "    ).assign(status_desc=lambda df: [responses[int(code)] for code in df[\"status\"]])\n",
     "    status_fig = px.treemap(\n",
     "        status_counts,\n",
-    "        maxdepth = 2,\n",
-    "        path=[px.Constant('Status codes'), 'status_cat', 'status'],\n",
-    "        hover_name='status_cat',\n",
+    "        maxdepth=2,\n",
+    "        path=[px.Constant(\"Status codes\"), \"status_cat\", \"status\"],\n",
+    "        hover_name=\"status_cat\",\n",
     "        height=height,\n",
     "        width=width,\n",
-    "        custom_data=['status_desc'],\n",
-    "        values='count',\n",
+    "        custom_data=[\"status_desc\"],\n",
+    "        values=\"count\",\n",
     "        title=title,\n",
-    "        template=theme\n",
+    "        template=theme,\n",
     "    )\n",
     "    status_fig.data[0].marker.line.width = 0.01\n",
-    "    status_fig.data[0].marker.pad = dict.fromkeys('lrbt', 0)\n",
-    "    status_fig.data[0]['texttemplate'] = _texttemplate\n",
-    "    status_fig.data[0]['hovertemplate'] = _texttemplate\n",
+    "    status_fig.data[0].marker.pad = dict.fromkeys(\"lrbt\", 0)\n",
+    "    status_fig.data[0][\"texttemplate\"] = _texttemplate\n",
+    "    status_fig.data[0][\"hovertemplate\"] = _texttemplate\n",
     "    if export_to_html:\n",
     "        status_fig.write_html(export_to_html)\n",
     "    return status_fig"
@@ -253,7 +253,7 @@
     }
    ],
    "source": [
-    "codes = pd.read_csv('data/status_codes.csv')\n",
+    "codes = pd.read_csv(\"data/status_codes.csv\")\n",
     "codes"
    ]
   },
@@ -562,7 +562,7 @@
     }
    ],
    "source": [
-    "status_codes(codes['status'])"
+    "status_codes(codes[\"status\"])"
    ]
   },
   {
@@ -1896,7 +1896,7 @@
     }
    ],
    "source": [
-    "status_codes(codes['status'], theme='seaborn')"
+    "status_codes(codes[\"status\"], theme=\"seaborn\")"
    ]
   },
   {
@@ -2991,7 +2991,7 @@
     }
    ],
    "source": [
-    "status_codes(codes['status'], theme='plotly_dark')"
+    "status_codes(codes[\"status\"], theme=\"plotly_dark\")"
    ]
   },
   {
@@ -3279,7 +3279,7 @@
     }
    ],
    "source": [
-    "status_codes(codes['status'], width=700, height=700)"
+    "status_codes(codes[\"status\"], width=700, height=700)"
    ]
   },
   {
@@ -4048,15 +4048,16 @@
     }
    ],
    "source": [
-    "website = 'MyWebsite.com'\n",
+    "website = \"MyWebsite.com\"\n",
     "title = f'Error Codes distribution <b>400</b> and <b>500</b><br>clickable: <i><a href=\"https://mywebsite.com\">{website}</i> – April 3, 2023'\n",
     "\n",
     "status_codes(\n",
-    "    codes.query('status >= 400')['status'],\n",
+    "    codes.query(\"status >= 400\")[\"status\"],\n",
     "    title=title,\n",
     "    height=700,\n",
     "    width=1300,\n",
-    "    theme='ggplot2')"
+    "    theme=\"ggplot2\",\n",
+    ")"
    ]
   },
   {
@@ -4344,9 +4345,10 @@
    ],
    "source": [
     "status_codes(\n",
-    "    codes['status'],\n",
-    "    title='Status Code - Exported to HTML',\n",
-    "    export_to_html='data/status_code_chart.html')"
+    "    codes[\"status\"],\n",
+    "    title=\"Status Code - Exported to HTML\",\n",
+    "    export_to_html=\"data/status_code_chart.html\",\n",
+    ")"
    ]
   },
   {
@@ -4364,10 +4366,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| hide\n",
-    "#| echo: false\n",
-    "#| execute: false\n",
-    "status_codes(codes['status'], theme='plotly_dark').write_image('data/images/status_codes_chart.png')"
+    "# | hide\n",
+    "# | echo: false\n",
+    "# | execute: false\n",
+    "status_codes(codes[\"status\"], theme=\"plotly_dark\").write_image(\n",
+    "    \"data/images/status_codes_chart.png\"\n",
+    ")"
    ]
   },
   {
@@ -4377,8 +4381,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| hide\n",
-    "import nbdev; nbdev.nbdev_export()"
+    "# | hide\n",
+    "import nbdev\n",
+    "\n",
+    "nbdev.nbdev_export()"
    ]
   }
  ],
