--- a/nbs/04_flag.ipynb
+++ b/nbs/04_flag.ipynb
@@ -31,6 +31,7 @@
     "\n",
     "import pandas as pd\n",
     "import plotly.express as px\n",
+    "from plotly.data import gapminder\n",
     "from nbdev.showdoc import *"
    ]
   },
@@ -1928,9 +1929,6 @@
    "display_name": "python3",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "name": "python"
   }
  },
  "nbformat": 4,
