Fix parameter issue

--- a/nbs/01_status_codes.ipynb
+++ b/nbs/01_status_codes.ipynb
@@ -532,7 +532,7 @@
     "# | hide\n",
     "# | echo: false\n",
     "# | execute: false\n",
-    "status_codes(codes[\"status\"], theme=\"plotly_dark\").write_image(\n",
+    "status_codes(codes[\"status\"], template=\"plotly_dark\").write_image(\n",
     "    \"data/images/status_codes_chart.png\"\n",
     ")"
    ]
@@ -556,6 +556,9 @@
    "display_name": "python3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "name": "python"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
